--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://sparkcognition.applytojob.com/apply/l32pPal7fJ/Senior-DevOps-Engineer'>Senior DevOps Engineer - SparkCognition - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reifyhealth/d911cfaf-aba3-4b8b-984e-40fe28486246'>Reify Health - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Boston United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://orbitpeople.applytojob.com/apply/LIkyCEjfL7/Devops-Operational-Support'>Devops Operational Support - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
+<h5><a href='https://jobs.lever.co/klarna/0d8e6a52-cbc5-4be8-9ee7-c8debcf97eee'>Klarna - Engineering Manager - DevOps & Automation</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -174,7 +182,7 @@
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -190,11 +198,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
+<h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -214,11 +222,11 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -230,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -246,7 +254,7 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
+<h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -278,11 +286,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
+<h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
     Devops Engineer at Scripbox Advisors Private Limited
 </a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
@@ -302,7 +310,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
+<h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to DevOps Engineer at TechFlow in Reston, VA.</p>
 <hr/>
@@ -453,14 +461,6 @@ agile service team focused on daily production service delivery and application?
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/axiomzen/cbb485b5-eb70-49bb-9dc6-e1576015203b'>Axiom Zen - DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">Vancouver, BC  Vancouver</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698395981-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
